Contact details updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg mr-2 "></i><a class="resume-link" href="tel:#">+1 316 737 5237</a></li>
 								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg mr-2"></i><a class="resume-link" href="mailto:#">desrinivasu@gmail.com</a></li>
 								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg mr-2"></i><a class="resume-link" href="#">vasuans.github.io</a></li>
+								<li class="mb-2"><i class="fab fa-github-square fa-lg mr-2"></i><a class="resume-link" href="github.com/vasuans">vasuans</a></li>
+									<li class="mb-2"><i class="fab fa-linkedin fa-lg mr-2"></i><a class="resume-link" href="linkedin.com/in/srinivasu-addanki">srinivasu-addanki</a></li>
+								<!-- <li class="list-inline-item mb-lg-0 mr-3"><a class="resume-link" href="#"><i class="fab fa-linkedin fa-2x mr-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/srinivasu-addanki</span></a></li> -->
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg mr-2"></i>Atlanta, Georgia</li>
+								<!-- <li class="list-inline-item mb-lg-0 mr-3"><a class="resume-link" href="#"><i class="fab fa-github-square fa-2x mr-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/vasuans</span></a></li> -->
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
